Landing Page Academia do Bronks (responsividade atualizada)

--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Vitor Teixeira">
+    <meta name="description" content="Landing Page de uma Academia">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Academy</title>
-
+    <title>Início - Academia do Bronks</title>
     <!--Link CSS-->
     <link rel="stylesheet" href="/style.css">
-    
 </head>
 <body>
- 
     <header>
         <nav class="navbar">
             <a href="#"><h1 class="logo">ACADEMIA DO BRONKS</h1></a>
@@ -36,7 +35,7 @@
         </div>
     </main>
     <footer></footer>
-
+    <!--JavaScript Link-->
     <script type="text/javascript" src="mobile-navbar.js"></script>
 </body>
 </html>
